--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@react-router/node": "^7.0.2",
     "@react-router/serve": "^7.0.2",
+    "@rvf/core": "^7.0.1",
+    "@rvf/react-router": "^7.0.1",
+    "@rvf/zod": "^7.0.1",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
